# sol

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_SOL.md  SECURITY.md  SOL_Master_Chronicle.md  basin_jeans_stability.py  basin_landscape_survey.py  basin_phonon_sweep.py  circuit_primitives.py  codex.json  console_log_q15.txt  damping_phase_map.py  emergence_check_results.csv  emergence_check_summary.txt  experiment_phonon_micro_rsi.py  experiment_thinking_engine_resonance.py  experiment_thinking_engine_resonance_phase2.py  flicker_and_frozen.py  jeans_cosmology_experiment.py  lattice_stress_test.py  logic_gate_router.py  manifold_superposition_deep.py  manifold_superposition_probe.py  open_questions_investigation.py  overnight_rsi.py  overnight_rsi_q13_q15.py  phonon_proof_hardening.py  pyproject.toml  q12_results.txt  q12_symmetry_breaking_investigation.py  q2_dead_zone_investigation.py  q2_topo_analysis.py  q5_half_adder_investigation.py  q5_results.txt  solMath_v2.tex  sol_3d_crystal_of_meaning.py  (+25 more)
.github/: README_SolTech.md  kit_graph.dot  kit_graph.html  kit_graph.md  sol_agent_architecture_full.dot
KB/: README.md  philosophy_knowledge_base.md  sample_kb.md
_tools/: generate_full_reports.py  generate_sol_fullResearch_rd0_rd30.py
data/: basin_jeans_stability_output.txt  basin_landscape_survey.json  basin_phonon_sweep.json  basin_phonon_sweep_ext.json  circuit_primitives.json  circuit_primitives_output.txt  consolidation_log.jsonl  damping_phase_map_output.txt  initiatory_phonon_lattice_map_2026-02-14.json  (+18 more)
(+13402 files in other folders)
